--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5115,3 +5115,22 @@ pages={11106--11115}
 	month={November},
 	location = {San Diego, CA},
 }
+
+@inproceedings{Boroujerdian:ICCD'18,
+  title={Trading Off Temperature Guardbands via Adaptive Approximations},
+  author={Behzad Boroujerdian and Hussam Amrouch and J\"{o}rg Henkel and Andreas Gerstlauer},
+  booktitle= iccd,
+  pages={202--209},
+  year={2018},
+}
+
+@ARTICLE{Amrouch:TCAD'20,
+	title = {{NPU} Thermal Management},
+	author = {Hussam Amrouch and Georgios Zervakis and Sami Salamin and Hammam Kattan and Iraklis Anagnostopoulos and J\"{o}rg Henkel},
+	journal = tcad,
+	volume = {39},
+	number = {11},	
+	pages = {3842--3855},
+	year = {2020},
+	month = {November},
+}
