--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5134,3 +5134,12 @@ pages={11106--11115}
 	year = {2020},
 	month = {November},
 }
+
+@inproceedings{Qi:ICCAD'21,
+	title={Accelerating Framework of Transformer by Hardware Design and Model Compression Co-Optimization},
+	author={Panjie Qi and Edwin Hsing-Mean Sha and Qingfeng Zhuge and Hongwu Peng and Shaoyi Huang and Zhenglun Kong and Yuhong Song and Bingbing Li},
+	booktitle=iccad,
+	year={2021},
+	month={November},
+	location = {Munich, Germany},
+}
