--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5143,3 +5143,28 @@ pages={11106--11115}
 	month={November},
 	location = {Munich, Germany},
 }
+
+@Article{Clegg:TCS'98,
+  author =       {Benjamin A. Clegg and Gregory J. {DiGirolamo} and Steven W. Keele},
+  title =        {Sequence Learning},
+  journal =      {Trends in Cognitive Sciences},
+  year =         {1998},
+  volume =   {2},
+  number =   {8},
+  pages =     {275--281},
+  month =     {August},
+}
+
+@Article{Lipton:CoRR'15,
+  author =       {Zachary C. Lipton and John Berkowitz and Charles Elkan},
+  title =        {A Critical Review of Recurrent Neural Networks for Sequence Learning},
+  journal =      {CoRR},
+  year =         {2015},
+  month =     {October},
+  volume =   {abs/1506.00019},
+  eprinttype = {arXiv},
+  eprint    = {1506.00019},
+  url       = {http://arxiv.org/abs/1506.00019},
+  OPTnumber =   {8},
+  OPTpages =     {275--281},
+}
