--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5078,6 +5078,7 @@ pages={11106--11115}
 	number={4},
 	pages={419--432},
 	year={2020},
+	month={December},
 }
 
 @inproceedings{Guan:ASPDAC'17,
@@ -5122,6 +5123,8 @@ pages={11106--11115}
   booktitle= iccd,
   pages={202--209},
   year={2018},
+  month={October},
+  location={Orlando, FL, USA},
 }
 
 @ARTICLE{Amrouch:TCAD'20,
