--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5171,3 +5171,12 @@ pages={11106--11115}
   OPTnumber =   {8},
   OPTpages =     {275--281},
 }
+
+@techreport{Wang:ARM'17,
+     title = {Intelligent Power Allocation: Maximize performance in the thermal envelope},
+     author = {Xin Wang},
+     year = {2017},
+     institution = {ARM Limited},
+     month = {March},
+     type = {White Paper},
+}
