--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4961,15 +4961,11 @@ url = {www.bgc-jena.mpg.de/wetter}
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
-@inbook{zhang2013matrix,
-  title={Matrix Theory: Basic Results and Techniques},
-  author={Zhang, F.},
-  isbn={9781475757972},
-  lccn={98051754},
-  series={Universitext},
-  year={2013},
-  publisher={Springer New York},
-  pages = {275--276}
+@Book{Zhang:Book'13,
+Author={Fuzhen Zhang},
+Title={Matrix Theory: Basic Results and Techniques},
+Publisher={Springer New York},
+Year={2013}
 }
 
 @article{Zervakis:TOC'22,
@@ -5179,4 +5175,14 @@ pages={11106--11115}
      institution = {ARM Limited},
      month = {March},
      type = {White Paper},
+}
+
+@Article{So:LAA'94,
+  author = {Wasin So},
+  title = {Commutativity and spectra of Hermitian matrices},
+  journal = {Linear Algebra and its Applications},
+  year = {1994},
+  volume = {212--213},
+  pages = {121--129},
+  month = {November},
 }
