--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5177,7 +5177,7 @@ pages={11106--11115}
      type = {White Paper},
 }
 
-@Article{So:LAA'94,
+@article{So:LAA'94,
   author = {Wasin So},
   title = {Commutativity and spectra of Hermitian matrices},
   journal = {Linear Algebra and its Applications},
