--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1242,15 +1242,15 @@ Year = {2010},
 
 @inproceedings{Liu:BMAS'06,
   title={An Extended {SVD}-based Terminal and Model Order Reduction Algorithm},
-  author={Pu Liu and Sheldon Tan and Boyuan Yan and Bruce McGaughy},
+  author={Pu Liu and Sheldon Tan and Boyuan Yan and Bruce MCGauGhy},
   booktitle= bmas,
-  pages={44--49},
+  paGes={44--49},
   month =  {Septermber},
   year={2006},
 }
 
 @article{Christofides:CCE'13,
-  author={Panagiotis Christofides and Riccardo Scattolini and David {Munoz de la Pena} and Jinfeng Liu},
+  author={PanaGiotis Christofides and Riccardo Scattolini and David {Munoz de la Pena} and Jinfeng Liu},
   title={Distributed model predictive control: A tutorial review and future research directions},
   journal = {Computers and Chemical Engineering},
   year={2013},
@@ -5186,3 +5186,203 @@ pages={11106--11115}
   pages = {121--129},
   month = {November},
 }
+
+%  the start of modification by gxz
+@article{Zhang:MFAP'17,
+  title={3D integration technologies: An overview},
+  author={Zhang, Dingyou and Lu, James J-Q},
+  journal={Materials for Advanced Packaging},
+  pages={1--26},
+  year={2017},
+  publisher={Springer}
+}
+
+@inproceedings{Black:MICRO'06,
+  title={Die stacking (3D) microarchitecture},
+  author={Black, Bryan and Annavaram, Murali and Brekelbaum, Ned and DeVale, John and Jiang, Lei and Loh, Gabriel H and McCaule, Don and Morrow, Pat and Nelson, Donald W and Pantuso, Daniel and others},
+  booktitle={IEEE/ACM International Symposium on Microarchitecture},
+  pages={469--479},
+  year={2006},
+  organization={IEEE}
+}
+
+@inproceedings{Chen:VLSI-DAT'13,
+  title={Design of thermal management unit with vertical throttling scheme for proactive thermal-aware 3D NoC systems},
+  author={Chen, Kun-Chih and Lin, Shu-Yen and Wu, An-Yeu},
+  booktitle={International Symposium onVLSI Design, Automation, and Test},
+  pages={1--4},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{Li:TCPMT'19,
+  title={Dynamic thermal management for 3-d ics with time-dependent power map using microchannel cooling and machine learning},
+  author={Li, Yong-Sheng and Yu, Huan and Jin, Hang and Sarvey, Thomas E and Oh, Hanju and Bakir, Muhannad S and Swaminathan, Madhavan and Li, Er-Ping},
+  journal={IEEE Transactions on Components, Packaging and Manufacturing Technology},
+  volume={9},
+  number={7},
+  pages={1244--1252},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{Marjanovic:FUElecEnerg'22,
+  title={Spatial spice model of a wireless sensor network node based on a thermoelectric generator},
+  author={Marjanovic, Milos Borivoj and Stojkovic, Aleksandra and Prijic, Aneta and Dankovic, Danijel and Prijic, Zoran},
+  journal={Facta Universitatis, Series: Electronics and Energetics},
+  volume={35},
+  number={4},
+  pages={513--539},
+  year={2022}
+}
+
+@article{Floros:Technologies'18,
+  title={A preconditioned iterative approach for efficient full chip thermal analysis on massively parallel platforms},
+  author={Floros, George and Daloukas, Konstantis and Evmorfopoulos, Nestor and Stamoulis, George},
+  journal={Technologies},
+  volume={7},
+  number={1},
+  pages={1},
+  year={2018},
+  publisher={MDPI}
+}
+
+@article{Patil:Sadhana'21,
+  title={Compact modeling of through silicon vias for thermal analysis in 3-D IC structures},
+  author={Patil, Chandrashekhar V and Suma, MS},
+  journal={S{\=a}dhan{\=a}},
+  volume={46},
+  number={1},
+  pages={35},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{Chen:SJ'20,
+  title={Temperature tracking and management with number-limited thermal sensors for thermal-aware NoC systems},
+  author={Chen, Kun-Chih and Tang, Hsueh-Wen and Liao, Yuan-Hao and Yang, Yueh-Chi},
+  journal={IEEE Sensors Journal},
+  volume={20},
+  number={21},
+  pages={13018--13028},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{Guo:SJ'22,
+  title={A Nearest-Neighbor-Based Thermal Sensor Allocation and Temperature Reconstruction Method for 3-D NoC-Based Multicore Systems},
+  author={Guo, Menghao and Cheng, Tong and Li, Xinyi and Li, Li and Fu, Yuxiang},
+  journal={IEEE Sensors Journal},
+  volume={22},
+  number={24},
+  pages={24186--24196},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{Sagi:TCAD'20,
+  title={A lightweight nonlinear methodology to accurately model multicore processor power},
+  author={Sagi, Mark and Doan, Nguyen Anh Vu and Rapp, Martin and Wild, Thomas and Henkel, J{\"o}rg and Herkersdorf, Andreas},
+  journal=tcad,
+  volume={39},
+  number={11},
+  pages={3152--3164},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{Ozceylan:THERMINIC'20,
+  title={Improving temperature prediction accuracy using Kalman and particle filtering methods},
+  author={Ozceylan, Baver and Haverkort, Boudewijn R and De Graaf, Maurits and Gerards, Marco ET},
+  booktitle={International Workshop on Thermal Investigations of ICs and Systems},
+  pages={37--42},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{Wchte:TVLSI'19,
+  title={Predictive thermal management for energy-efficient execution of concurrent applications on heterogeneous multicores},
+  author={W{\"a}chter, Eduardo Weber and De Bellefroid, C{\'e}dric and Basireddy, Karunakar Reddy and Singh, Amit Kumar and Al-Hashimi, Bashir M and Merrett, Geoff},
+  journal=tvlsi,
+  volume={27},
+  number={6},
+  pages={1404--1415},
+  year={2019},
+  publisher={IEEE}
+}
+
+@inproceedings{Guo:ISOCC'21,
+  title={Optimized method for thermal tracking in 3D NoC systems by using ANN},
+  author={Guo, Menghao and Cheng, Tong and Li, Li and Fu, Yuxiang},
+  booktitle={International SoC Design Conference (ISOCC)},
+  pages={111--112},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{Rapp:MLCAD'20,
+  title={Towards nn-based online estimation of the full-chip temperature and the rate of temperature change},
+  author={Rapp, Martin and Elfatairy, Omar and Wolf, Marilyn and Henkel, J{\"o}rg and Amrouch, Hussam},
+  booktitle={Proceedings of the 2020 ACM/IEEE Workshop on Machine Learning for CAD},
+  pages={95--100},
+  year={2020}
+}
+
+@article{Li:TVLSI'20,
+  title={Accurate on-chip temperature sensing for multicore processors using embedded thermal sensors},
+  author={Li, Xin and Li, Zhi and Zhou, Wei and Duan, Zhemin},
+  journal=tvlsi,
+  volume={28},
+  number={11},
+  pages={2328--2341},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{Cheng:ISOCC'21,
+  title={LSTM-based Temperature Prediction and Hotspot Tracking for Thermal-aware 3D NoC System},
+  author={Cheng, Tong and Du, Haoyu and Li, Li and Fu, Yuxiang},
+  booktitle={International SoC Design Conference (ISOCC)},
+  pages={286--287},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{Siddhu:TACO'22,
+  title={CoMeT: An integrated interval thermal simulation toolchain for 2D, 2.5 D, and 3D processor-memory systems},
+  author={Siddhu, Lokesh and Kedia, Rajesh and Pandey, Shailja and Rapp, Martin and Pathania, Anuj and Henkel, J{\"o}rg and Panda, Preeti Ranjan},
+  journal={ACM Transactions on Architecture and Code Optimization (TACO)},
+  volume={19},
+  number={3},
+  pages={1--25},
+  year={2022},
+  publisher={ACM New York, NY}
+}
+
+@article{Bai:arXiv'18,
+  title={An empirical evaluation of generic convolutional and recurrent networks for sequence modeling},
+  author={Bai, Shaojie and Kolter, J Zico and Koltun, Vladlen},
+  journal={arXiv preprint arXiv:1803.01271},
+  year={2018}
+}
+
+@article{Sherstinsky:PhysicaD'20,
+  title={Fundamentals of recurrent neural network (RNN) and long short-term memory (LSTM) network},
+  author={Sherstinsky, Alex},
+  journal={Physica D: Nonlinear Phenomena},
+  volume={404},
+  pages={132306},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{Alzubaidi:J.BigData'21,
+  title={Review of deep learning: Concepts, CNN architectures, challenges, applications, future directions},
+  author={Alzubaidi, Laith and Zhang, Jinglan and Humaidi, Amjad J and Al-Dujaili, Ayad and Duan, Ye and Al-Shamma, Omran and Santamar{\'\i}a, Jos{\'e} and Fadhel, Mohammed A and Al-Amidie, Muthana and Farhan, Laith},
+  journal={Journal of big Data},
+  volume={8},
+  pages={1--74},
+  year={2021},
+  publisher={Springer}
+}
+%  the end of modification by gxz
