--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -1246,15 +1246,15 @@ Year = {2010},
 
 @inproceedings{Liu:BMAS'06,
   title={An Extended {SVD}-based Terminal and Model Order Reduction Algorithm},
-  author={Pu Liu and Sheldon Tan and Boyuan Yan and Bruce MCGauGhy},
+  author={Pu Liu and Sheldon Tan and Boyuan Yan and Bruce McGaughy},
   booktitle= bmas,
-  paGes={44--49},
+  pages={44--49},
   month =  {Septermber},
   year={2006},
 }
 
 @article{Christofides:CCE'13,
-  author={PanaGiotis Christofides and Riccardo Scattolini and David {Munoz de la Pena} and Jinfeng Liu},
+  author={Panagiotis Christofides and Riccardo Scattolini and David {Munoz de la Pena} and Jinfeng Liu},
   title={Distributed model predictive control: A tutorial review and future research directions},
   journal = {Computers and Chemical Engineering},
   year={2013},
