--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5254,7 +5254,7 @@ pages={11106--11115}
   journal={S{\=a}dhan{\=a}},
   volume={46},
   number={1},
-  pages={35},
+  pages={35-44},
   year={2021},
   publisher={Springer}
 }
@@ -5355,7 +5355,7 @@ pages={11106--11115}
   journal={ACM Transactions on Architecture and Code Optimization (TACO)},
   volume={19},
   number={3},
-  pages={1--25},
+  pages={45--69},
   year={2022},
   publisher={ACM New York, NY}
 }
@@ -5372,19 +5372,16 @@ pages={11106--11115}
   author={Sherstinsky, Alex},
   journal={Physica D: Nonlinear Phenomena},
   volume={404},
-  pages={132306},
   year={2020},
   publisher={Elsevier}
 }
 
-@article{Alzubaidi:J.BigData'21,
+@book{Alzubaidi:Book'21,
   title={Review of deep learning: Concepts, CNN architectures, challenges, applications, future directions},
   author={Alzubaidi, Laith and Zhang, Jinglan and Humaidi, Amjad J and Al-Dujaili, Ayad and Duan, Ye and Al-Shamma, Omran and Santamar{\'\i}a, Jos{\'e} and Fadhel, Mohammed A and Al-Amidie, Muthana and Farhan, Laith},
-  journal={Journal of big Data},
-  volume={8},
-  pages={1--74},
-  year={2021},
-  publisher={Springer}
+  publisher={Springer},
+  year={2021}
+
 }
 %  the end of modification by gxz
 =======
