--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -56,10 +56,6 @@
 @string{tie="IEEE Trans. on Industrial Electronics"}
 @string{cl="Computational Linguistics"}
 
-@string{nocs="Proc. IEEE/ACM Int. Symp. on Networks-on-Chip (NOCS)"}
-@string{osdi="Proc. USENIX. Conf. on Operating Systems Design and Implementation (OSDI)"}
-@string{hcs="IEEE Hot Chips Symposiu (HCS)"}
-@string{sc="Proc. Int. Conf. for High Performance Computing, Networking, Storage and Analysis"}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -5392,33 +5388,33 @@ pages={11106--11115}
   pages =    {211--222},
   year =     {2002},
   month = {October},
-  location = {San Jose, California},
+  location = {San Jose, CA, USA},
 }
 
 @inProceedings{Kim:NOCS'11,
   author =       {Hyungjun Kim and Pritha Ghoshal and Boris Grot and Paul V. Gratz and Daniel A. Jiménez},
   title =        {Reducing {Network-on-Chip} energy consumption through spatial locality speculation},
-  booktitle =    nocs,
+  booktitle =    {Proc. IEEE/ACM Int. Symp. on Networks-on-Chip (NOCS)},
   pages =    {233--240},
   year =     {2011},
   month = {May},
-  location = {Pittsburgh, Pennsylvania},
+  location = {Pittsburgh, PA, USA},
 }
 
 @inProceedings{Boyd-Wickizer:OSDI'08,
   author =       {Silas Boyd-Wickizer and Haibo Chen and Rong Chen and Yandong Mao and Frans Kaashoek and Robert Morris and Aleksey Pesterev and Lex Stein and Ming Wu and Yuehua Dai and Yang Zhang and Zheng Zhang},
   title =        {Corey: an operating system for many cores},
-  booktitle =    osdi,
+  booktitle =    {Proc. USENIX. Conf. on Operating Systems Design and Implementation (OSDI)},
   pages =    {43--57},
   year =     {2008},
   month = {December},
-  location = {San Diego, California},
+  location = {San Diego, CA, USA},
 }
 
 @inProceedings{Ramey:HCS'11,
   author =       {Carl Ramey},
   title =        {{TILE-Gx100 ManyCore} processor: Acceleration interfaces and architecture},
-  booktitle =    hcs,
+  booktitle =    {IEEE Hot Chips Symposiu (HCS)},
   pages =    {1--21},
   year =     {2011},
   month = {August},
@@ -5435,12 +5431,10 @@ pages={11106--11115}
  pages = {557--562}
 }
 
-
 @inProceedings{Carlson:SC'11,
   author =       {Trevor E. Carlson and Wim Heirman and Lieven Eeckhout},
   title =        {Sniper: Exploring the level of abstraction for scalable and accurate parallel multi-core simulation},
-  booktitle =    sc,
-  pages =    {1--12},
+  booktitle =    {Proc. Int. Conf. for High Performance Computing, Networking, Storage and Analysis (SC)},
   year =     {2011},
   month = {November},
   location = {Seattle, WA, USA},
