--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5296,6 +5296,14 @@ pages={11106--11115}
   organization={IEEE}
 }
 
+@inproceedings{Ranieri:DAC'12,
+  title={EigenMaps: Algorithms for optimal thermal maps extraction and sensor placement on multicore processors},
+  author={Ranieri, Juri and Vincenzi, Alessandro and Chebira, Amina and Atienza, David and Vetterli, Martin},
+  booktitle=dac,
+  pages={636--641},
+  year={2012}
+}
+
 @article{Wchte:TVLSI'19,
   title={Predictive thermal management for energy-efficient execution of concurrent applications on heterogeneous multicores},
   author={W{\"a}chter, Eduardo Weber and De Bellefroid, C{\'e}dric and Basireddy, Karunakar Reddy and Singh, Amit Kumar and Al-Hashimi, Bashir M and Merrett, Geoff},
