--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5207,7 +5207,7 @@ pages={11106--11115}
 @inproceedings{Chen:VLSI-DAT'13,
   title={Design of thermal management unit with vertical throttling scheme for proactive thermal-aware 3D NoC systems},
   author={Chen, Kun-Chih and Lin, Shu-Yen and Wu, An-Yeu},
-  booktitle={International Symposium onVLSI Design, Automation, and Test},
+  booktitle={Int. Symp. onVLSI Design, Automation, and Test (VLSI-DAT)},
   year={2013},
   organization={IEEE}
 }
@@ -5215,7 +5215,7 @@ pages={11106--11115}
 @article{Li:TCPMT'19,
   title={Dynamic thermal management for 3-d ics with time-dependent power map using microchannel cooling and machine learning},
   author={Li, Yong-Sheng and Yu, Huan and Jin, Hang and Sarvey, Thomas E and Oh, Hanju and Bakir, Muhannad S and Swaminathan, Madhavan and Li, Er-Ping},
-  journal={IEEE Transactions on Components, Packaging and Manufacturing Technology},
+  journal={IEEE Trans. on Components, Packaging and Manufacturing Technology (TCPMT)},
   volume={9},
   number={7},
   pages={1244--1252},
@@ -5290,7 +5290,7 @@ pages={11106--11115}
 @inproceedings{Ozceylan:THERMINIC'20,
   title={Improving temperature prediction accuracy using Kalman and particle filtering methods},
   author={Ozceylan, Baver and Haverkort, Boudewijn R and De Graaf, Maurits and Gerards, Marco ET},
-  booktitle={International Workshop on Thermal Investigations of ICs and Systems},
+  booktitle={Int. Workshop on Thermal Investigations of ICs and Systems (THERMINIC)},
   pages={37--42},
   year={2020},
   organization={IEEE}
@@ -5318,7 +5318,7 @@ pages={11106--11115}
 @inproceedings{Guo:ISOCC'21,
   title={Optimized method for thermal tracking in 3D NoC systems by using ANN},
   author={Guo, Menghao and Cheng, Tong and Li, Li and Fu, Yuxiang},
-  booktitle={International SoC Design Conference (ISOCC)},
+  booktitle={Int. SoC Design Conference (ISOCC)},
   pages={111--112},
   year={2021},
   organization={IEEE}
@@ -5327,7 +5327,7 @@ pages={11106--11115}
 @inproceedings{Rapp:MLCAD'20,
   title={Towards nn-based online estimation of the full-chip temperature and the rate of temperature change},
   author={Rapp, Martin and Elfatairy, Omar and Wolf, Marilyn and Henkel, J{\"o}rg and Amrouch, Hussam},
-  booktitle={Proceedings of the 2020 ACM/IEEE Workshop on Machine Learning for CAD},
+  booktitle={Proc. of the 2020 ACM/IEEE Workshop on Machine Learning for CAD (MLCAD)},
   pages={95--100},
   year={2020}
 }
@@ -5346,7 +5346,7 @@ pages={11106--11115}
 @inproceedings{Cheng:ISOCC'21,
   title={LSTM-based Temperature Prediction and Hotspot Tracking for Thermal-aware 3D NoC System},
   author={Cheng, Tong and Du, Haoyu and Li, Li and Fu, Yuxiang},
-  booktitle={International SoC Design Conference (ISOCC)},
+  booktitle={Int. SoC Design Conference (ISOCC)},
   pages={286--287},
   year={2021},
   organization={IEEE}
@@ -5355,7 +5355,7 @@ pages={11106--11115}
 @article{Siddhu:TACO'22,
   title={CoMeT: An integrated interval thermal simulation toolchain for 2D, 2.5 D, and 3D processor-memory systems},
   author={Siddhu, Lokesh and Kedia, Rajesh and Pandey, Shailja and Rapp, Martin and Pathania, Anuj and Henkel, J{\"o}rg and Panda, Preeti Ranjan},
-  journal={ACM Transactions on Architecture and Code Optimization (TACO)},
+  journal={ACM Trans. on Architecture and Code Optimization (TACO)},
   volume={19},
   number={3},
   pages={45--69},
