--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -966,11 +966,13 @@ for Mixed {ILP-TLP} Workloads in Dark Silicon Chips},
 }
 
 @inproceedings{Wallentowitz:FPL'12,
-  title={A framework for {Open Tiled Manycore System-On-Chip}},
+  title={A framework for Open Tiled Manycore {System-On-Chip}},
   author={Stefan Wallentowitz and Andreas Lankes and Aurang Zaib and Thomas Wild and Andreas Herkersdorf},
-  booktitle= {Proc. International Conference on Field-programmable Logic and Applications (FPL)},
+  booktitle= {Proc. Int. Conf. on Field-programmable Logic and Applications (FPL)},
   pages={535--538},
+  month={August},
   year={2012},
+  location={Oslo, Norway},
 }
 
 @ONLINE{OpTiMSoC:Online,
@@ -5456,4 +5458,13 @@ pages={11106--11115}
   booktitle={Proc. IEEE/ACM Int. Symp. on Microarchitecture (MICRO)},
   pages={738-–753},
   year={2021},
+}
+
+@inproceedings{Hosseinabady:FPL'14,
+  title={Run-time power gating in hybrid {ARM-FPGA} devices},
+  author={Mohammad Hosseinabady and Jose Luis Nunez-Yanez},
+  booktitle= {Proc. Int. Conf. on Field-programmable Logic and Applications (FPL)},
+  month={September},
+  year={2014},
+  location = {Munich, Germany},
 }
