--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -41,6 +41,7 @@
 @string{cdc="Proc. IEEE Conf. on Decision and Control (CDC)"}
 @string{codes="Proc. Int. conf. on Hardware/software codesign and system synthesis (CODES+ISSS)"}
 @string{micro="IEEE MICRO"}
+@string{micro_conf="Proc. IEEE/ACM Int. Symp. on Microarchitecture (MICRO)"}
 @string{icml="Proc. Int. Conf. on Machine Learning (ICML)"}
 @string{cvpr="Proc. IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR)"}
 @string{tpds="IEEE Trans. on Parallel and Distributed Systems"}
@@ -64,11 +65,11 @@
 	author = {Hai Wang and Xingyi Long and Xue-Xin Liu},
 	journal = tnnls,
 	title = {{fastESN}: Fast Echo State Network},
-	year = {2022},
-        OPTmonth = {October},
-        OPTvolume = {70},
-        OPTnumber = {10},
-        OPTpages = {1539--1554},
+	year = {2023},
+        month = {December},
+        volume = {34},
+        number = {12},
+        pages = {10487--10501},
 }
 
 @ARTICLE{WangHe:TCAD'22,
@@ -76,10 +77,10 @@
 	journal = tcad,
 	title = {{DBP}: Distributed Power Budgeting for Many-Core Systems in Dark Silicon},
 	year = {2022},
-        OPTmonth = {October},
-        OPTvolume = {70},
-        OPTnumber = {10},
-        OPTpages = {1539--1554},
+        month = {December},
+        volume = {41},
+        number = {12},
+        pages = {5727--5731},
 }
 
 @ARTICLE{WangLi:TOC'21,
@@ -1169,7 +1170,9 @@ month = apr
   author={Siva Velusamy and Wei Huang and John Lach and Mircea Stan and Kevin Skadron},
   booktitle= iccd,
   pages={634--637},
+  month =  {October},
   year={2005},
+  location={San Jose, CA, USA},
 }
 
 @article{Chen:TCASI'07,
@@ -5201,8 +5204,9 @@ pages={11106--11115}
 @inproceedings{Black:MICRO'06,
   title={Die stacking (3D) microarchitecture},
   author={Black, Bryan and Annavaram, Murali and Brekelbaum, Ned and DeVale, John and Jiang, Lei and Loh, Gabriel H and McCaule, Don and Morrow, Pat and Nelson, Donald W and Pantuso, Daniel and others},
-  booktitle={Proc. IEEE/ACM Int. Symp. on Microarchitecture (MICRO)},
+  booktitle=micro_conf,
   pages={469--479},
+  month={December},
   year={2006},
 }
 
@@ -5455,9 +5459,11 @@ pages={11106--11115}
 @inproceedings{Kandiah:MICRO'21,
   title={{AccelWattch}: A Power Modeling Framework for Modern {GPUs}},
   author={Vijay Kandiah and Scott Peverelle and Mahmoud Khairy and Junrui Pan and Amogh Manjunath and Timothy G. Rogers and Tor M. Aamodt and Nikos Hardavellas},
-  booktitle={Proc. IEEE/ACM Int. Symp. on Microarchitecture (MICRO)},
+  booktitle=micro_conf,
   pages={738-–753},
+  month={October},
   year={2021},
+  location={Virtual Event, Greece},
 }
 
 @inproceedings{Hosseinabady:FPL'14,
