--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5388,7 +5388,7 @@ pages={11106--11115}
 =======
 @inProceedings{Kim:ASPLOS'02,
   author =       {Changkyu Kim and Doug Burger and Stephen W. Keckler},
-  title =        {An Adaptive, {Non-Uniform} Cache Structure for {Wire-Delay} Dominated {On-Chip} Caches},
+  title =        {An Adaptive, Non-Uniform Cache Structure for Wire-Delay Dominated On-Chip Caches},
   booktitle =    asplos,
   pages =    {211--222},
   year =     {2002},
