--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5196,13 +5196,13 @@ pages={11106--11115}
 %  the start of modification by gxz
 @book{Zhang:Book'17,
   author={Zhang, Dingyou and Lu, James J-Q},
-  title={3D integration technologies: An overview},
+  title={{3D} integration technologies: An overview},
   publisher={Springer},  
   year={2017}
 }
 
 @inproceedings{Black:MICRO'06,
-  title={Die stacking (3D) microarchitecture},
+  title={Die stacking {3D} microarchitecture},
   author={Black, Bryan and Annavaram, Murali and Brekelbaum, Ned and DeVale, John and Jiang, Lei and Loh, Gabriel H and McCaule, Don and Morrow, Pat and Nelson, Donald W and Pantuso, Daniel and others},
   booktitle=micro_conf,
   pages={469--479},
@@ -5211,15 +5211,15 @@ pages={11106--11115}
 }
 
 @inproceedings{Chen:VLSI-DAT'13,
-  title={Design of thermal management unit with vertical throttling scheme for proactive thermal-aware 3D NoC systems},
+  title={Design of thermal management unit with vertical throttling scheme for proactive thermal-aware {3D} {NoC} systems},
   author={Chen, Kun-Chih and Lin, Shu-Yen and Wu, An-Yeu},
-  booktitle={Int. Symp. onVLSI Design, Automation, and Test (VLSI-DAT)},
+  booktitle={Int. Symp. on VLSI Design, Automation, and Test (VLSI-DAT)},
   year={2013},
   organization={IEEE}
 }
 
 @article{Li:TCPMT'19,
-  title={Dynamic thermal management for 3-d ics with time-dependent power map using microchannel cooling and machine learning},
+  title={Dynamic thermal management for {3-D} {ICs} with time-dependent power map using microchannel cooling and machine learning},
   author={Li, Yong-Sheng and Yu, Huan and Jin, Hang and Sarvey, Thomas E and Oh, Hanju and Bakir, Muhannad S and Swaminathan, Madhavan and Li, Er-Ping},
   journal={IEEE Trans. on Components, Packaging and Manufacturing Technology (TCPMT)},
   volume={9},
@@ -5250,7 +5250,7 @@ pages={11106--11115}
 }
 
 @article{Patil:Sadhana'21,
-  title={Compact modeling of through silicon vias for thermal analysis in 3-D IC structures},
+  title={Compact modeling of through silicon vias for thermal analysis in {3D} {IC} structures},
   author={Patil, Chandrashekhar V and Suma, MS},
   journal={S{\=a}dhan{\=a}},
   volume={46},
@@ -5261,7 +5261,7 @@ pages={11106--11115}
 }
 
 @article{Chen:SJ'20,
-  title={Temperature tracking and management with number-limited thermal sensors for thermal-aware NoC systems},
+  title={Temperature tracking and management with number-limited thermal sensors for thermal-aware {NoC} systems},
   author={Chen, Kun-Chih and Tang, Hsueh-Wen and Liao, Yuan-Hao and Yang, Yueh-Chi},
   journal={IEEE Sensors Journal},
   volume={20},
@@ -5272,7 +5272,7 @@ pages={11106--11115}
 }
 
 @article{Guo:SJ'22,
-  title={A Nearest-Neighbor-Based Thermal Sensor Allocation and Temperature Reconstruction Method for 3-D NoC-Based Multicore Systems},
+  title={A Nearest-Neighbor-Based Thermal Sensor Allocation and Temperature Reconstruction Method for {3-D} {NoC-Based} Multicore Systems},
   author={Guo, Menghao and Cheng, Tong and Li, Xinyi and Li, Li and Fu, Yuxiang},
   journal={IEEE Sensors Journal},
   volume={22},
@@ -5294,7 +5294,7 @@ pages={11106--11115}
 }
 
 @inproceedings{Ozceylan:THERMINIC'20,
-  title={Improving temperature prediction accuracy using Kalman and particle filtering methods},
+  title={Improving temperature prediction accuracy using {Kalman} and particle filtering methods},
   author={Ozceylan, Baver and Haverkort, Boudewijn R and De Graaf, Maurits and Gerards, Marco ET},
   booktitle={Int. Workshop on Thermal Investigations of ICs and Systems (THERMINIC)},
   pages={37--42},
@@ -5314,7 +5314,7 @@ pages={11106--11115}
 }
 
 @inproceedings{Guo:ISOCC'21,
-  title={Optimized method for thermal tracking in 3D NoC systems by using ANN},
+  title={Optimized method for thermal tracking in {3D} {NoC} systems by using {ANN}},
   author={Guo, Menghao and Cheng, Tong and Li, Li and Fu, Yuxiang},
   booktitle={Int. SoC Design Conference (ISOCC)},
   pages={111--112},
@@ -5323,7 +5323,7 @@ pages={11106--11115}
 }
 
 @inproceedings{Rapp:MLCAD'20,
-  title={Towards nn-based online estimation of the full-chip temperature and the rate of temperature change},
+  title={Towards {NN-based} online estimation of the full-chip temperature and the rate of temperature change},
   author={Rapp, Martin and Elfatairy, Omar and Wolf, Marilyn and Henkel, J{\"o}rg and Amrouch, Hussam},
   booktitle={Proc. of the 2020 ACM/IEEE Workshop on Machine Learning for CAD (MLCAD)},
   pages={95--100},
@@ -5342,7 +5342,7 @@ pages={11106--11115}
 }
 
 @inproceedings{Cheng:ISOCC'21,
-  title={LSTM-based Temperature Prediction and Hotspot Tracking for Thermal-aware 3D NoC System},
+  title={{LSTM-based} Temperature Prediction and Hotspot Tracking for Thermal-aware {3D} {NoC} System},
   author={Cheng, Tong and Du, Haoyu and Li, Li and Fu, Yuxiang},
   booktitle={Int. SoC Design Conference (ISOCC)},
   pages={286--287},
@@ -5351,7 +5351,7 @@ pages={11106--11115}
 }
 
 @article{Siddhu:TACO'22,
-  title={CoMeT: An integrated interval thermal simulation toolchain for 2D, 2.5 D, and 3D processor-memory systems},
+  title={CoMeT: An integrated interval thermal simulation toolchain for {2D, 2.5 D, and 3D} processor-memory systems},
   author={Siddhu, Lokesh and Kedia, Rajesh and Pandey, Shailja and Rapp, Martin and Pathania, Anuj and Henkel, J{\"o}rg and Panda, Preeti Ranjan},
   journal={ACM Trans. on Architecture and Code Optimization (TACO)},
   volume={19},
@@ -5369,7 +5369,7 @@ pages={11106--11115}
 }
 
 @article{Sherstinsky:PhysicaD'20,
-  title={Fundamentals of recurrent neural network (RNN) and long short-term memory (LSTM) network},
+  title={Fundamentals of recurrent neural network {(RNN)} and long short-term memory {(LSTM)} network},
   author={Sherstinsky, Alex},
   journal={Physica D: Nonlinear Phenomena},
   volume={404},
