--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5316,7 +5316,7 @@ pages={11106--11115}
 @inproceedings{Guo:ISOCC'21,
   title={Optimized method for thermal tracking in {3D} {NoC} systems by using {ANN}},
   author={Menghao Guo and Tong Cheng and Li Li and Yuxiang Fu},
-  booktitle={Int. SoC Design Conference (ISOCC)},
+  booktitle={Int. SoC Design Conf. (ISOCC)},
   pages={111--112},
   year={2021},
   organization={IEEE}
@@ -5344,7 +5344,7 @@ pages={11106--11115}
 @inproceedings{Cheng:ISOCC'21,
   title={{LSTM-based} Temperature Prediction and Hotspot Tracking for Thermal-aware {3D} {NoC} System},
   author={Tong Cheng and Haoyu Du and Li Li and Yuxiang Fu},
-  booktitle={Int. SoC Design Conference (ISOCC)},
+  booktitle={Int. SoC Design Conf. (ISOCC)},
   pages={286--287},
   year={2021},
   organization={IEEE}
