--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3266,6 +3266,12 @@ year={2014}
    note = {arXiv:1512.01274, 2015},
 }
 
+@misc{Gu:ARXIV'23,
+      title={Mamba: Linear-Time Sequence Modeling with Selective State Spaces},
+      author={Albert Gu and Tri Dao},
+      note = {arXiv:2312.00752, 2023},
+}
+
 @article{Pedregosa:JMLR'11,
  title={Scikit-learn: Machine Learning in {P}ython},
  author={Fabian Pedregosa and Ga\"{e}I Varoquaux and Alexandre Gramfort and Vincent Michel and Bertrand Thirion and Olivier Grisel and Mathieu Blondel and Peter Prettenhofer and Ron Weiss and Vincent Dubourg and Jake Vanderplas and Alexandre Passos and David Cournapeau},
