--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3267,9 +3267,16 @@ year={2014}
 }
 
 @misc{Gu:ARXIV'23,
-      title={Mamba: Linear-Time Sequence Modeling with Selective State Spaces},
-      author={Albert Gu and Tri Dao},
-      note = {arXiv:2312.00752, 2023},
+  title={Mamba: Linear-Time Sequence Modeling with Selective State Spaces},
+  author={Albert Gu and Tri Dao},
+  note = {arXiv:2312.00752, 2023},
+}
+
+@inproceedings{Gu:ICLR'22,
+  title={Efficiently Modeling Long Sequences with Structured State Spaces},
+  author={Albert Gu and Karan Goel and Christopher R{\'e}},
+  booktitle=iclr,
+  year={2022},
 }
 
 @article{Pedregosa:JMLR'11,
