--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3279,6 +3279,13 @@ year={2014}
   year={2022},
 }
 
+@inproceedings{Goel:ICML'22,
+  title={It's raw! audio generation with state-space models},
+  author={Karan Goel and Albert Gu and Chris Donahue and Christopher R{\'e}},
+  booktitle=icml,
+  year={2022},
+}
+
 @article{Pedregosa:JMLR'11,
  title={Scikit-learn: Machine Learning in {P}ython},
  author={Fabian Pedregosa and Ga\"{e}I Varoquaux and Alexandre Gramfort and Vincent Michel and Bertrand Thirion and Olivier Grisel and Mathieu Blondel and Peter Prettenhofer and Ron Weiss and Vincent Dubourg and Jake Vanderplas and Alexandre Passos and David Cournapeau},
