--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3272,6 +3272,13 @@ year={2014}
   note = {arXiv:2312.00752, 2023},
 }
 
+@inproceedings{Gu:NIPS'21,
+title={Combining Recurrent, Convolutional, and Continuous-time Models with Linear State Space Layers},
+author={Albert Gu and Isys Johnson and Karan Goel and Khaled Kamal Saab and Tri Dao and Atri Rudra and Christopher Re},
+booktitle=nips,
+year={2021},
+}
+
 @inproceedings{Gu:ICLR'22,
   title={Efficiently Modeling Long Sequences with Structured State Spaces},
   author={Albert Gu and Karan Goel and Christopher R{\'e}},
