--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3274,7 +3274,7 @@ year={2014}
 
 @inproceedings{Gu:NIPS'21,
 title={Combining Recurrent, Convolutional, and Continuous-time Models with Linear State Space Layers},
-author={Albert Gu and Isys Johnson and Karan Goel and Khaled Kamal Saab and Tri Dao and Atri Rudra and Christopher Re},
+author={Albert Gu and Isys Johnson and Karan Goel and Khaled Kamal Saab and Tri Dao and Atri Rudra and Christopher R{\'e}},
 booktitle=nips,
 year={2021},
 }
