--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3293,6 +3293,14 @@ year={2021},
   year={2022},
 }
 
+@inproceedings{Orvieto:ICML'23,
+  author = {Orvieto, Antonio and Smith, Samuel L and Gu, Albert and Fernando, Anushan and Gulcehre, Caglar and Pascanu, Razvan and De, Soham},
+  title = {Resurrecting recurrent neural networks for long sequences},
+  booktitle=icml,
+  year={2023},
+  location = {<conf-loc>, <city>Honolulu</city>, <state>Hawaii</state>, <country>USA</country>, </conf-loc>},
+}
+
 @article{Pedregosa:JMLR'11,
  title={Scikit-learn: Machine Learning in {P}ython},
  author={Fabian Pedregosa and Ga\"{e}I Varoquaux and Alexandre Gramfort and Vincent Michel and Bertrand Thirion and Olivier Grisel and Mathieu Blondel and Peter Prettenhofer and Ron Weiss and Vincent Dubourg and Jake Vanderplas and Alexandre Passos and David Cournapeau},
