--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3272,6 +3272,14 @@ year={2014}
   note = {arXiv:2312.00752, 2023},
 }
 
+@inproceedings{GU:NIPS'20,
+ author = {Gu, Albert and Dao, Tri and Ermon, Stefano and Rudra, Atri and R\'{e}, Christopher},
+ booktitle = nips,
+ title = {HiPPO: Recurrent Memory with Optimal Polynomial Projections},
+ volume = {33},
+ year = {2020}
+}
+
 @inproceedings{Gu:NIPS'21,
 title={Combining Recurrent, Convolutional, and Continuous-time Models with Linear State Space Layers},
 author={Albert Gu and Isys Johnson and Karan Goel and Khaled Kamal Saab and Tri Dao and Atri Rudra and Christopher R{\'e}},
