--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3266,16 +3266,18 @@ year={2014}
    note = {arXiv:1512.01274, 2015},
 }
 
-@misc{Gu:ARXIV'23,
-  title={Mamba: Linear-Time Sequence Modeling with Selective State Spaces},
-  author={Albert Gu and Tri Dao},
-  note = {arXiv:2312.00752, 2023},
+@inproceedings{Tay:ICLR'21,
+title={Long Range Arena : A Benchmark for Efficient Transformers },
+author={Yi Tay and Mostafa Dehghani and Samira Abnar and Yikang Shen and Dara Bahri and Philip Pham and Jinfeng Rao and Liu Yang and Sebastian Ruder and Donald Metzler},
+booktitle=iclr,
+year={2021},
 }
 
-@inproceedings{GU:NIPS'20,
+@inproceedings{Gu:NIPS'20,
  author = {Gu, Albert and Dao, Tri and Ermon, Stefano and Rudra, Atri and R\'{e}, Christopher},
  booktitle = nips,
- title = {HiPPO: Recurrent Memory with Optimal Polynomial Projections},
+ pages = {1474--1487},
+ title = {{HiPPO}: Recurrent Memory with Optimal Polynomial Projections},
  volume = {33},
  year = {2020}
 }
@@ -3292,6 +3294,35 @@ year={2021},
   author={Albert Gu and Karan Goel and Christopher R{\'e}},
   booktitle=iclr,
   year={2022},
+}
+
+@inproceedings{Gupta:NIPS'22,
+title={Diagonal State Spaces are as Effective as Structured State Spaces},
+author={Ankit Gupta and Albert Gu and Jonathan Berant},
+booktitle=nips,
+year={2022},
+}
+
+@inproceedings{Gu:NIPS'22,
+ author = {Gu, Albert and Goel, Karan and Gupta, Ankit and R\'{e}, Christopher},
+ booktitle = nips,
+ pages = {35971--35983},
+ title = {On the Parameterization and Initialization of Diagonal State Space Models},
+ volume = {35},
+ year = {2022}
+}
+
+@inproceedings{Smith:ICLR'23,
+title={Simplified State Space Layers for Sequence Modeling},
+author={Jimmy T.H. Smith and Andrew Warrington and Scott Linderman},
+booktitle=iclr,
+year={2023},
+}
+
+@misc{Gu:ARXIV'23,
+  title={Mamba: Linear-Time Sequence Modeling with Selective State Spaces},
+  author={Albert Gu and Tri Dao},
+  note = {arXiv:2312.00752, 2023},
 }
 
 @inproceedings{Goel:ICML'22,
