--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5548,3 +5548,10 @@ pages={11106--11115}
   year={2014},
   location = {Munich, Germany},
 }
+
+@inproceedings{Gu:ICLR'23,
+title={How to Train your {HIPPO}: State Space Models with Generalized Orthogonal Basis Projections},
+author={Albert Gu and Isys Johnson and Aman Timalsina and Atri Rudra and Christopher Re},
+booktitle=iclr,
+year={2023},
+}
