--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5551,7 +5551,142 @@ pages={11106--11115}
 
 @inproceedings{Gu:ICLR'23,
 title={How to Train your {HIPPO}: State Space Models with Generalized Orthogonal Basis Projections},
-author={Albert Gu and Isys Johnson and Aman Timalsina and Atri Rudra and Christopher Re},
+author={Albert Gu and Isys Johnson and Aman Timalsina and Atri Rudra and Christopher R{\'e}},
 booktitle=iclr,
 year={2023},
+}
+
+@inproceedings{Chen:NIPS'18,
+ author={Ricky Tian Qi Chen and Yulia Rubanova and Jesse Bettencourt and David Duvenaud},
+ booktitle = nips,
+ title = {Neural Ordinary Differential Equations},
+ volume = {31},
+ year = {2018}
+}
+
+@inproceedings{Rubanova:NIPS'19,
+  title={Latent ordinary differential equations for irregularly-sampled time series},
+  author={Yulia Rubanova and Ricky Tian Qi Chen and David Duvenaud},
+  journal=nips,
+  volume={32},
+  year={2019}
+}
+
+@inproceedings{De:NIPS'19,
+  title={GRU-ODE-Bayes: Continuous modeling of sporadically-observed time series},
+  author={De Brouwer, Edward and Simm, Jaak and Arany, Adam and Moreau, Yves},
+  journal=nips,
+  volume={32},
+  year={2019}
+}
+
+@inproceedings{Voelker:NIPS'19,
+ author = {Voelker, Aaron and Kaji\'{c}, Ivana and Eliasmith, Chris},
+ booktitle = nips,
+ title = {Legendre Memory Units: Continuous-Time Representation in Recurrent Neural Networks},
+ volume = {32},
+ year = {2019}
+}
+
+@inproceedings{Ma:ICLR'23,
+title={Mega: Moving Average Equipped Gated Attention},
+author={Xuezhe Ma and Chunting Zhou and Xiang Kong and Junxian He and Liangke Gui and Graham Neubig and Jonathan May and Luke Zettlemoyer},
+booktitle=iclr,
+year={2023},
+}
+
+@inproceedings{David:ICLR'23,
+title={Decision S4: Efficient Sequence-Based {RL} via State Spaces Layers},
+author={Shmuel Bar David and Itamar Zimerman and Eliya Nachmani and Lior Wolf},
+booktitle={The Eleventh International Conference on Learning Representations },
+year={2023},
+}
+
+@inproceedings{He:CVPR'23,
+  title={Clip-s4: Language-guided self-supervised semantic segmentation},
+  author={He, Wenbin and Jamonnak, Suphanut and Gou, Liang and Ren, Liu},
+  booktitle=cvpr,
+  pages={11207--11216},
+  year={2023}
+}
+
+@inproceedings{Lu:ACL'24,
+  title={Not All Experts are Equal: Efficient Expert Pruning and Skipping for Mixture-of-Experts Large Language Models},
+  author={Xudong Lu and Qi Liu and Yuhui Xu and Aojun Zhou and Siyuan Huang and Bo Zhang and Junchi Yan and Hongsheng Li},
+  booktitle={Annual Meeting of the Association for Computational Linguistics},
+  month={aug},
+  year={2024},
+  address="Bangkok, Thailand",
+  pages="6159--6172",
+}
+
+@inproceedings{Hajimolahoseini:NIPS'21,
+  title={Compressing pre-trained language models using progressive low rank decomposition},
+  author={Hajimolahoseini, Habib and Rezagholizadeh, Mehdi and Partovinia, Vahid and Tahaei, Marzieh and Awad, Omar Mohamed and Liu, Yang},
+  journal=nips,
+  year={2021}
+}
+
+@inproceedings{Ji:EMNLP'24,
+    title = "Adaptive Feature-based Low-Rank Compression of Large Language Models via {B}ayesian Optimization",
+    author = "Ji, Yixin  and
+      Xiang, Yang  and
+      Li, Juntao  and
+      Xia, Qingrong  and
+      Ye, Zi  and
+      Duan, Xinyu  and
+      Wang, Zhefeng  and
+      Chen, Kehai  and
+      Zhang, Min",
+    editor = "Al-Onaizan, Yaser  and
+      Bansal, Mohit  and
+      Chen, Yun-Nung",
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2024",
+    month = nov,
+    year = "2024",
+    address = "Miami, Florida, USA",
+    publisher = "Association for Computational Linguistics",
+    pages = "4152--4168",
+}
+
+@article{Lin:TPAMI'19,
+  author={Lin, Shaohui and Ji, Rongrong and Chen, Chao and Tao, Dacheng and Luo, Jiebo},
+  journal=tpami,
+  title={Holistic CNN Compression via Low-Rank Decomposition with Knowledge Transfer},
+  year={2019},
+  volume={41},
+  number={12},
+  pages={2889-2905},
+  keywords={Knowledge transfer;Image coding;Task analysis;Information exchange;Computational modeling;Convolutional codes;Convolutional neural networks;low-rank decomposition;knowledge transfer;CNN compression;CNN acceleration},
+  doi={10.1109/TPAMI.2018.2873305}}
+
+@inproceedings{Girshick:ICCV'15,
+  author={Girshick, Ross},
+  booktitle={2015 IEEE International Conference on Computer Vision (ICCV)},
+  title={Fast R-CNN},
+  year={2015},
+  volume={},
+  number={},
+  pages={1440-1448},
+  keywords={Training;Proposals;Feature extraction;Object detection;Pipelines;Computer architecture;Open source software},
+  doi={10.1109/ICCV.2015.169}}
+
+@inproceedings{Sun:ICLR'24,
+title={A Simple and Effective Pruning Approach for Large Language Models},
+author={Mingjie Sun and Zhuang Liu and Anna Bair and J Zico Kolter},
+booktitle=iclr,
+year={2024},
+}
+
+@InProceedings{Frantar:ICML'23,
+  title = {{S}parse{GPT}: Massive Language Models Can be Accurately Pruned in One-Shot},
+  author = {Frantar, Elias and Alistarh, Dan},
+  booktitle = icml,
+  pages = {10323--10337},
+  year = {2023},
+  editor = {Krause, Andreas and Brunskill, Emma and Cho, Kyunghyun and Engelhardt, Barbara and Sabato, Sivan and Scarlett, Jonathan},
+  volume = {202},
+  series = {Proceedings of Machine Learning Research},
+  month = {23--29 Jul},
+  publisher = {PMLR},
 }
